--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+#################################
+# Maintenance Management System #
+#     Made By: Hisham-Echo      #
+#             2024              #
+#################################
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -130,15 +137,15 @@
                         <div class="Employee">
                             <h4>Employee</h4>
                             <select name="emp" id="emp">
-                                <option value="Hisham Saleh" id="H">Hisham Saleh</option>
-                                <option value="Mostafa Bakry" id="MOBA">Mostafa Bakry</option>
+                                <!-- <option value="Hisham Saleh" id="H">Hisham Saleh</option> -->
+                                <!-- <option value="Mostafa Bakry" id="MOBA">Mostafa Bakry</option> -->
                                 <option value="Mohamed Ibrahim" id="MI">Mohamed Ibrahim</option>
                                 <option value="Ibrahim Hassan" id="IH">Ibrahim Hassan</option>
                                 <option value="Mohamed Fathi" id="FA">Mohamed Fathi</option>
                                 <option value="Nada" id="N">Nada</option>
                                 <option value="Mohamed Shagar" id="S">Mohamed Shagar</option>
                                 <option value="Mohamed Essam" id="essam">Mohamed Essam</option>
-                                <option value="Mohamed Elaraby" id="elaraby">Mohamed Elaraby</option>
+                                <!-- <option value="Mohamed Elaraby" id="elaraby">Mohamed Elaraby</option> -->
                             </select>
                         </div> 
                     </div>
