--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Maintenance Management System for managing customer devices and accessories." />
+        <meta
+            name="keywords"
+            content="Maintenance, Management, System, Customer, Devices, Accessories" />
+        <meta name="author" content="Hisham-Echo" />
+        <meta name="robots" content="index, follow" />
+        <meta name="theme-color" content="#4CAF50" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="apple-mobile-web-app-title" content="Maintenance" />
+        <meta name="application-name" content="Maintenance" />
+        <meta name="msapplication-TileColor" content="#4CAF50" />
+        <meta name="msapplication-TileImage" content="./assets/logo.png" />
+        <meta name="msapplication-config" content="./assets/browserconfig.xml" />
+        <meta name="og:title" content="Maintenance Management System" />
+        <meta
+            name="og:description"
+            content="Maintenance Management System for managing customer devices and accessories." />
         <title>Maintenance</title>
         <link rel="stylesheet" href="./css/style.css" />
         <link
@@ -62,28 +82,7 @@
                     />
                     <!--  -->
                     <div class="options">
-                        <!-- <div class="paid">
-                            <h4>Paid?</h4>
-                            <div class="pay">
-                                <input
-                                    type="radio"
-                                    id="yes"
-                                    name="pay"
-                                    value="yes"
-                                />
-                                <label for="yes">YES</label>
-                            </div>
-                            <div class="pay">
-                                <input
-                                    type="radio"
-                                    id="no"
-                                    name="pay"
-                                    value="no"
-                                    checked
-                                />
-                                <label for="no">NO</label>
-                            </div>
-                        </div> -->
+                        
                         <div class="accessories">
                             <h4>Accessories</h4>
                             <div class="acs">
@@ -145,7 +144,7 @@
                                 <option value="Nada" id="N">Nada</option>
                                 <option value="Mohamed Shagar" id="S">Mohamed Shagar</option>
                                 <option value="Mohamed Essam" id="essam">Mohamed Essam</option>
-                                <!-- <option value="Mohamed Elaraby" id="elaraby">Mohamed Elaraby</option> -->
+                                <option value="Mohamed Elaraby" id="elaraby">Mohamed Elaraby</option>
                             </select>
                         </div> 
                     </div>
@@ -156,6 +155,12 @@
                 </form>
             </div>
             <div id="tasks"></div>
+            <footer>
+                <div class="footer">
+                    <p>Maintenance Management System &copy; 2024</p>
+                    <p>Made By: <a href="https://github.com/Hisham-Echo">Hisham Saleh</a></p>
+                </div>
+            </footer>
         </div>
         <div class="ticket"></div>
         <script src="./js/main.js"></script>
